--- a/xss/production/test/3js_cameras.html
+++ b/xss/production/test/3js_cameras.html
@@ -154,7 +154,7 @@ new THREE.Plane(
 	    var plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
 	    scene.addObject(plane_1);
                 plane_1.position.y = 0.100000001;
-                plane_1.rotation.x = -1.57;
+                plane_1.rotation.x = -1.57000005;
                 application.is_ctrl_down = false;
                 application.is_shift_down = false;
 	document.addEventListener( 'keydown', keydown_application, false );
