--- a/xss/production/test/3js_cube.html
+++ b/xss/production/test/3js_cube.html
@@ -89,7 +89,7 @@ new THREE.Plane(
 200,200);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
-                plane_1.rotation.x = -1.57;
+                plane_1.rotation.x = -1.57000005;
                 application.x_target_rotation = 0;
                 application.x_target_rotation_on_mouse_down = 0;
                 application.mouse_x = 0;
