--- a/xss/production/test/3js_cube_img.html
+++ b/xss/production/test/3js_cube_img.html
@@ -135,7 +135,7 @@ new THREE.Plane(
 200,200);
 	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
-                plane_1.rotation.x = -1.57;
+                plane_1.rotation.x = -1.57000005;
 	var __playing_sound1 = new THREE.Sound(streamer.get_resource('sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg').asset
 	,700,20,true
 	);
