--- a/xss/production/test/3js_sound.html
+++ b/xss/production/test/3js_sound.html
@@ -127,7 +127,7 @@ new THREE.Plane(
 	    var plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
 	    scene.addObject(plane_1);
                 plane_1.position.y = 0.100000001;
-                plane_1.rotation.x = -1.57;
+                plane_1.rotation.x = -1.57000005;
 if(ui)
 {
 	ui.load_resources(function(){		
