--- a/xss/production/test/box2d2.html
+++ b/xss/production/test/box2d2.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript" src="../js/ms-state.js"></script>
         <script type="text/javascript" src="../js/Box2dWeb-2.1.a.3.min.js"></script>
+            <script type="text/javascript" src="../js/ms-spawner.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -18,6 +19,7 @@ var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+var Sound = new ms.ui.Sound();
 		if(drawingCanvas){
 			var client =
 			{
@@ -30,26 +32,58 @@ var application = {};
 			var g_ui_root = ui.root;
 		}
 		var streamer = new ms.streamer.Streamer();
-         var   b2Vec2 = Box2D.Common.Math.b2Vec2
-            ,  b2AABB = Box2D.Collision.b2AABB
-         	,	b2BodyDef = Box2D.Dynamics.b2BodyDef
-         	,	b2Body = Box2D.Dynamics.b2Body
-         	,	b2FixtureDef = Box2D.Dynamics.b2FixtureDef
-         	,	b2Fixture = Box2D.Dynamics.b2Fixture
-         	,	b2World = Box2D.Dynamics.b2World
-         	,	b2MassData = Box2D.Collision.Shapes.b2MassData
-         	,	b2PolygonShape = Box2D.Collision.Shapes.b2PolygonShape
-         	,	b2CircleShape = Box2D.Collision.Shapes.b2CircleShape
-         	,	b2DebugDraw = Box2D.Dynamics.b2DebugDraw
-            ,  b2MouseJointDef =  Box2D.Dynamics.Joints.b2MouseJointDef
-            ;
-         var g_world = new b2World(
-               new b2Vec2(0, 10)    //gravity
-            ,  true                 //allow sleep
-         );
-         var g_world_scale = 30;
-         var fixDef = new b2FixtureDef;
-         var bodyDef = new b2BodyDef;
+        var   b2Vec2 = Box2D.Common.Math.b2Vec2
+        ,  b2AABB = Box2D.Collision.b2AABB
+        ,  b2Mat22 = Box2D.Common.Math.b2Mat22
+        ,	b2BodyDef = Box2D.Dynamics.b2BodyDef
+        ,	b2Body = Box2D.Dynamics.b2Body
+        ,	b2FixtureDef = Box2D.Dynamics.b2FixtureDef
+        ,	b2Fixture = Box2D.Dynamics.b2Fixture
+        ,	b2World = Box2D.Dynamics.b2World
+        ,	b2MassData = Box2D.Collision.Shapes.b2MassData
+        ,	b2PolygonShape = Box2D.Collision.Shapes.b2PolygonShape
+        ,	b2CircleShape = Box2D.Collision.Shapes.b2CircleShape
+        ,	b2DebugDraw = Box2D.Dynamics.b2DebugDraw
+        ,  b2MouseJointDef =  Box2D.Dynamics.Joints.b2MouseJointDef
+        , b2Transform = Box2D.Common.Math.b2Transform
+        ;
+        var g_world = new b2World(
+            new b2Vec2(0, 10)    //gravity
+        ,  true                 //allow sleep
+        );
+            var g_spawner_manager = new ms.arcade.SpawnManager();
+        var g_step_collisions = [];
+        var contactListener = new Box2D.Dynamics.b2ContactListener;
+        contactListener.BeginContact = function(contact, manifold) 
+        {
+            function get_collider(body)
+            {
+                if (body.host && ("collision" in body.host))
+                    return body.host;
+                return null;
+            }
+            var host1 = get_collider(contact.GetFixtureA().GetBody());
+            var host2 = get_collider(contact.GetFixtureB().GetBody());
+            if (host1)
+                g_step_collisions.push({host1: host1, host2:contact.GetFixtureB().GetBody().host, contact: contact, manifold:manifold});
+            if (host2)
+                g_step_collisions.push({host1: host2, host2:contact.GetFixtureA().GetBody().host, contact: contact, manifold:manifold});
+        };
+        g_world.SetContactListener(contactListener);
+        var g_world_scale = 30;
+        var fixDef = new b2FixtureDef;
+        var bodyDef = new b2BodyDef;
+        function update_body_position(host)
+        {
+            var me = host.physics;
+            if (me.xs_updating)
+                return;
+            var pos = new b2Vec2((host.x + host.w/2)/g_world_scale, (host.y + host.h/2)/g_world_scale);
+            var rot = new b2Mat22();
+            rot.Set(host.rotation);
+            var xform = new b2Transform(pos, rot);
+            me.SetTransform(xform);
+        }
         var def_package_items = [];
                 def_package_items.push(
             {
@@ -63,12 +97,17 @@ var application = {};
 		resource_type:RESOURCE_IMAGE,
 		src:"images/smile_sad_48.png"
 });
+                def_package_items.push(
+            {
+		id:"__image3",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/stone-12.jpg"
+});
         var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
 		g_startup_package.load();	
 function start(resolution)  
 {  
-	var start = new Date().getTime();  
-	function update()  
+	function updater()  
 	{  
 		var now   = new Date().getTime();
         if (g_elapsed < 0)
@@ -79,6 +118,32 @@ function start(resolution)
         g_world.Step(1 / 60, 10, 10);
         g_world.DrawDebugData();
         g_world.ClearForces();
+            g_spawner_manager.update(g_delta);
+        //process collisions
+        for(var i = 0; i < g_step_collisions.length; i++)
+        {
+            var info = g_step_collisions[i];
+            info.host1.collision(info.host2, info.contact, info.manifold);
+        }
+        g_step_collisions = [];
+        //process contacts
+        function get_contact_handler(body)
+        {
+            if (body.host && ("contact" in body.host))
+                return body.host;
+            return null;
+        }
+        var cc = g_world.GetContactList();
+        while(cc)
+        {
+            var host1 = get_contact_handler(cc.GetFixtureA().GetBody());
+            var host2 = get_contact_handler(cc.GetFixtureB().GetBody());
+            if (host1)
+                host1.contact(host2, cc);
+            if (host2)
+                host2.contact(host1, cc);
+            cc = cc.GetNext();
+        }
         //synch
         var bb = g_world.GetBodyList();
         while(bb)
@@ -90,24 +155,25 @@ function start(resolution)
             }    
             var angle = bb.GetAngle();
             var pos   = bb.GetTransform().position;
-            if (bb.xs_visual)
+            if (bb.host)
             {
                 var x = pos.x*g_world_scale;
                 var y = pos.y*g_world_scale;
-                bb.xs_visual.position(x - bb.xs_visual.w/2, y - bb.xs_visual.h/2);
-                bb.xs_visual.set_rotation(angle);
+                bb.host.xs_updating = true;
+                bb.host.position(x - bb.host.w/2, y - bb.host.h/2);
+                bb.host.set_rotation(angle);
+                bb.host.xs_updating = false;
             }
             bb = bb.GetNext();
         }
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(update, resolution);  
-	}  
-	window.setTimeout(update, resolution);  
+        window.setTimeout(updater, resolution);  
+	}
+	window.setTimeout(updater, resolution);  
 }  
 window.onload = function() 
 {
-	var Sound = new ms.ui.Sound();
 	drawingCanvas = document.getElementById("myCanvas");
     g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
@@ -138,28 +204,69 @@ window.onload = function()
 		    btn1 = new ms.ui.Button( 
 	    "images/smile_sad_48.png","images/smile_grin_48.png",g_ui_root.manager, g_ui_root);
                 btn1.set_rotation(0.200000003);
-                btn1.set_height(50);
                 btn1.rect(200, 200, 50, 50);
+		    floor = new ms.ui.Image( 
+	    "images/stone-12.jpg",g_ui_root.manager, g_ui_root);
+                floor.rect(0, 390, 600, 40);
+                btn1.ev_resized = function(cmp) 
+                {
+                    if (cmp.physics)
+                        g_world.DestroyBody(cmp.physics);
              fixDef.density = 1;
              fixDef.friction = 0.5;
              fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_dynamicBody;
-                    fixDef.shape = new b2CircleShape(Math.min(btn1.w, btn1.h)/(2*30));
-                bodyDef.position.Set((btn1.x + btn1.w/2)/30, 
-                                     (btn1.y + btn1.h/2)/30);
+                    fixDef.shape = new b2CircleShape(Math.min(cmp.w, cmp.h)/(2*g_world_scale));
+            fixDef.isSensor = false;
+                bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
             current_body = g_world.CreateBody(bodyDef);
             current_body.CreateFixture(fixDef);
-                btn1.physics = current_body;
-                current_body.xs_visual = btn1;
+                cmp.physics = current_body;
+                cmp.moved = update_body_position;
+                current_body.host = cmp;
+                }
+                if (btn1.w > 0 && btn1.h > 0)
+                {
+                    btn1.ev_resized(btn1);
+                }
+                btn1.RemoveFromWorld = function(keep_visual) 
+                {
+                    g_world.DestroyBody(btn1.physics);
+                    if (!keep_visual)
+                    {
+                        btn1.parent.removeComponent(btn1);
+                    }
+                }
+                floor.ev_resized = function(cmp) 
+                {
+                    if (cmp.physics)
+                        g_world.DestroyBody(cmp.physics);
              fixDef.density = 1;
              fixDef.friction = 0.5;
              fixDef.restitution = 0.200000003;
              bodyDef.type = b2Body.b2_staticBody;
                 fixDef.shape = new b2PolygonShape;
-                    fixDef.shape.SetAsBox(20, 2);
-                bodyDef.position.Set(10, 15.1300001);
+                    fixDef.shape.SetAsBox(cmp.w/(2*g_world_scale), cmp.h/(2*g_world_scale));
+            fixDef.isSensor = false;
+                bodyDef.position.Set((cmp.x + cmp.w/2)/g_world_scale, (cmp.y + cmp.h/2)/g_world_scale);
             current_body = g_world.CreateBody(bodyDef);
             current_body.CreateFixture(fixDef);
+                cmp.physics = current_body;
+                cmp.moved = update_body_position;
+                current_body.host = cmp;
+                }
+                if (floor.w > 0 && floor.h > 0)
+                {
+                    floor.ev_resized(floor);
+                }
+                floor.RemoveFromWorld = function(keep_visual) 
+                {
+                    g_world.DestroyBody(floor.physics);
+                    if (!keep_visual)
+                    {
+                        floor.parent.removeComponent(floor);
+                    }
+                }
             g_ui.fill_background = false; //td: cross idiom
             var debugDraw = new b2DebugDraw();
             var debugDrawCanvas = document.getElementById("myCanvas");
@@ -185,7 +292,7 @@ window.onload = function()
             {
                 application.init();
             }
-			start();
+            start();
 			ui.draw(drawingCanvas.getContext('2d'));
 		});
 	}
