--- a/xss/production/test/ui_class_test.html
+++ b/xss/production/test/ui_class_test.html
@@ -17,6 +17,7 @@ var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+var Sound = new ms.ui.Sound();
 		if(drawingCanvas){
 			var client =
 			{
@@ -40,8 +41,7 @@ var application = {};
 		g_startup_package.load();	
 function start(resolution)  
 {  
-	var start = new Date().getTime();  
-	function update()  
+	function updater()  
 	{  
 		var now   = new Date().getTime();
         if (g_elapsed < 0)
@@ -51,9 +51,9 @@ function start(resolution)
         g_elapsed = now; 
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(update, resolution);  
-	}  
-	window.setTimeout(update, resolution);  
+        window.setTimeout(updater, resolution);  
+	}
+	window.setTimeout(updater, resolution);  
 }  
             my_image = Class.create(ms.ui.Image,
         {
@@ -63,24 +63,26 @@ function start(resolution)
     {
         $super(
         src        );
-    },
-                x_pos : null,
-                y_pos : null,
-                img2 : null,
-	traslate : function() 
+                this.x_pos = null;
+                this.y_pos = null;
+                this.img2 = null;
+	this.traslate = function() 
 	{
 		this.x += 5;
 this.y += 5;
 this.set_rotation(this.rotation + 0.200000003);
-	},
-	click : function()
+	};
+	this.click = function()
 	{    
 		this.x_pos = this.x;
 this.y_pos = this.y;
 this.traslate();
 this.img2 = new my_image("images/img1.png");
 this.img2.rect(this.x_pos + 50, this.y_pos - 50, 50, 50);
-	},
+	};
+            if (this.init)
+                this.init();
+            },
 });
                 application.test = null;
                 application.x_pos = 100;
@@ -94,7 +96,6 @@ this.img2.rect(this.x_pos + 50, this.y_pos - 50, 50, 50);
 	};
 window.onload = function() 
 {
-	var Sound = new ms.ui.Sound();
 	drawingCanvas = document.getElementById("myCanvas");
     g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
@@ -124,8 +125,6 @@ window.onload = function()
 	};	
 		    img1 = new ms.ui.Image( 
 	    "images/img1.png",g_ui_root.manager, g_ui_root);
-                img1.src("images/img1.png");
-                img1.set_height(50);
 	img1.click = function()
 	{    
 		if (application.x_pos >= application.X_MAX - 110)
@@ -161,7 +160,7 @@ application.img2.rect(application.x_pos, application.y_pos, 50, 50);
             {
                 application.init();
             }
-			start();
+            start();
 			ui.draw(drawingCanvas.getContext('2d'));
 		});
 	}
