--- a/xss/production/test/ui_audio.html
+++ b/xss/production/test/ui_audio.html
@@ -17,6 +17,7 @@ var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+var Sound = new ms.ui.Sound();
 		if(drawingCanvas){
 			var client =
 			{
@@ -118,8 +119,7 @@ var application = {};
 		g_startup_package.load();	
 function start(resolution)  
 {  
-	var start = new Date().getTime();  
-	function update()  
+	function updater()  
 	{  
 		var now   = new Date().getTime();
         if (g_elapsed < 0)
@@ -129,14 +129,13 @@ function start(resolution)
         g_elapsed = now; 
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(update, resolution);  
-	}  
-	window.setTimeout(update, resolution);  
+        window.setTimeout(updater, resolution);  
+	}
+	window.setTimeout(updater, resolution);  
 }  
                 application.curr_sound = null;
 window.onload = function() 
 {
-	var Sound = new ms.ui.Sound();
 	drawingCanvas = document.getElementById("myCanvas");
     g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
@@ -170,7 +169,6 @@ window.onload = function()
                 lbl1.position(220, 190);
 		    btnSound1 = new ms.ui.Button( 
 	    "images/sound_2.png","images/sound_2.png",g_ui_root.manager, g_ui_root);
-                btnSound1.set_height(10);
 	btnSound1.click = function()
 	{    
 		sound_1.pause();
@@ -181,7 +179,6 @@ application.curr_sound.play();
                 btnSound1.rect(275, 210, 50, 10);
 		    btnSound2 = new ms.ui.Button( 
 	    "images/sound_1.png","images/sound_1.png",g_ui_root.manager, g_ui_root);
-                btnSound2.set_height(10);
 	btnSound2.click = function()
 	{    
 		sound_2.pause();
@@ -193,12 +190,9 @@ application.curr_sound.play();
 		    volume_bar = new ms.ui.ProgressBar( 
 	    null,g_ui_root.manager, g_ui_root);
                 volume_bar.value(50);
-                volume_bar.set_height(10);
                 volume_bar.rect(225, 120, 150, 10);
 		    btn1 = new ms.ui.Image( 
 	    "images/arrow_left.png",g_ui_root.manager, g_ui_root);
-                btn1.set_height(20);
-                btn1.src("images/arrow_left.png");
 	btn1.click = function()
 	{    
 		volume_bar.value(volume_bar.get_value() - 10);
@@ -207,8 +201,6 @@ application.curr_sound.volume -= 0.100000001;
                 btn1.rect(200, 115, 20, 20);
 		    btn2 = new ms.ui.Image( 
 	    "images/arrow_right.png",g_ui_root.manager, g_ui_root);
-                btn2.set_height(20);
-                btn2.src("images/arrow_right.png");
 	btn2.click = function()
 	{    
 		volume_bar.value(volume_bar.get_value() + 10);
@@ -221,7 +213,6 @@ application.curr_sound.volume += 0.100000001;
                 lbl3.position(220, 100);
 		    btnPlay = new ms.ui.Button( 
 	    "images/play.png","images/play_over.png",g_ui_root.manager, g_ui_root);
-                btnPlay.set_height(50);
 	btnPlay.click = function()
 	{    
 		application.curr_sound.play();
@@ -229,7 +220,6 @@ application.curr_sound.volume += 0.100000001;
                 btnPlay.rect(175, 300, 50, 50);
 		    btnPause = new ms.ui.Button( 
 	    "images/pause.png","images/pause_over.png",g_ui_root.manager, g_ui_root);
-                btnPause.set_height(50);
 	btnPause.click = function()
 	{    
 		application.curr_sound.pause();
@@ -237,7 +227,6 @@ application.curr_sound.volume += 0.100000001;
                 btnPause.rect(275, 300, 50, 50);
 		    btnStop = new ms.ui.Button( 
 	    "images/stop.png","images/stop_over.png",g_ui_root.manager, g_ui_root);
-                btnStop.set_height(50);
 	btnStop.click = function()
 	{    
 		application.curr_sound.pause();
@@ -267,7 +256,7 @@ application.curr_sound.currentTime = 0;
             {
                 application.init();
             }
-			start();
+            start();
 			ui.draw(drawingCanvas.getContext('2d'));
 		});
 	}
