--- a/xss/production/test/box2d4.html
+++ b/xss/production/test/box2d4.html
@@ -393,6 +393,7 @@ g_sequence_manager);
 		if (who instanceof floor)
 {
 this.RemoveFromWorld();
+Sound.play("sounds/boom.wav");
 }
 	};
             if (this.init)
